--- a/services/frontend/src/view/product.pug
+++ b/services/frontend/src/view/product.pug
@@ -25,7 +25,7 @@ block content
                   for item of category.data
                     a.product-card(href=`/product/detail?id=${item.id}`)
                       .product-card-wallpaper(qianli-animate='animate-fade-in')
-                        img(src=`${item.img[0]}`)
+                        img(src=`${layout.domain.resource}${item.img[0]}`)
                       .product-card-inner
                         p.product-card__title(qianli-animate='animate-fade-in') #{item.title}
                         p.product-card__desc(qianli-animate='animate-fade-in') #{item.name}
