--- a/services/frontend/src/view/product_detail.pug
+++ b/services/frontend/src/view/product_detail.pug
@@ -32,17 +32,17 @@ block content
               for item of detail.img
                 .swiper-slide
                   .product-detail-slide
-                    img(src=`${item}`)
+                    img(src=`${layout.domain.resource}${item}`)
                     if detail.media
                       a.product-detail-play(href="javascript:;")
-                        img(src="//localhost:3000/image/play.png")
+                        img(src=`${layout.domain.resource}/image/play.png`)
 
           .swiper-container.product-detail-swiper__preview
             .swiper-wrapper
               for item of detail.img
                 .swiper-slide(style="height: 126px;")
                   .product-detail-swiper__preview-slide
-                    img(src=`${item}`)
+                    img(src=`${layout.domain.resource}${item}`)
 
   //- 产品特点
   if detail.feature.length
@@ -57,7 +57,7 @@ block content
               each item,index in detail.feature
                 .swiper-slide
                   .product-detail-feature__slide
-                    img.product-detail-feature__icon(src=`${item.img}` qianli-animate='animate-fade-in')
+                    img.product-detail-feature__icon(src=`${layout.domain.resource}${item.img}` qianli-animate='animate-fade-in')
                     p.product-detail-feature__title(qianli-animate='animate-fade-in')
                       b #{item.title}
                     p.product-detail-feature__desc(qianli-animate='animate-fade-in') #{item.desc}
@@ -65,9 +65,9 @@ block content
             .swiper-pagination
 
           a.prev(href="javascript:;")
-            img(src="//localhost:3000/image/pro_l.png")
+            img(src=`${layout.domain.resource}/image/pro_l.png`)
           a.next(href="javascript:;")
-            img(src="//localhost:3000/image/pro_r.png")
+            img(src=`${layout.domain.resource}/image/pro_r.png`)
 
   //- 应用场景
   if detail.scenario.length
@@ -103,10 +103,10 @@ block content
     .product-detail-dialog-container
       .product-detail-dialog
         .product-detail-dialog__content
-          video(id="media" src=`${detail.media}` playsinline="true" controls loop)
+          video(id="media" src=`${layout.domain.resource}${detail.media}` playsinline="true" controls loop)
         .product-detail-dialog__footer
           a.close(href="javascript:;")
-            img(src="//localhost:3000/image/close.png")
+            img(src=`${layout.domain.resource}/image/close.png`)
 
 block footer
   script(type="text/javascript" charset="utf-8").
