--- a/services/frontend/src/view/news.pug
+++ b/services/frontend/src/view/news.pug
@@ -17,7 +17,7 @@ block content
 
       .news-center-cover
         .news-center-cover__inner(qianli-animate='animate-fade-in')
-          img(src=`${post.img}`)
+          img(src=`${layout.domain.resource}${post.img}`)
 
   section#news-container
     .news-inner
@@ -25,7 +25,7 @@ block content
         for item of news.list
           li.news-item
             .news-item-cover(qianli-animate='animate-fade-in')
-              img(src=`${item.img}`)
+              img(src=`${layout.domain.resource}${item.img}`)
             a.news-item-content(href=`/post/${item.id}`)
               p.news-item-category(qianli-animate='animate-fade-in')
                 b #{item.category_name}
@@ -33,7 +33,7 @@ block content
                 b #{item.title}
               p.news-item-date(qianli-animate='animate-fade-in')
                 b #{item.date}
-              img.news-item-icon(src="//localhost:3000/image/case_r.png" qianli-animate='animate-fade-in')
+              img.news-item-icon(src=`${layout.domain.resource}/image/case_r.png` qianli-animate='animate-fade-in')
 
       .flex.justify-center
         +qianli-pagination(pagination)
